--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lib": "lib",
     "test": "test"
   },
+  "engines": {
+    "node": "8.1.3",
+    "npm": "5.2.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack -w",
