Refactor for AIM screenname terminology

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,7 +3,7 @@
 # Table name: users
 #
 #  id              :integer          not null, primary key
-#  username        :string           not null
+#  screenname        :string           not null
 #  password_digest :string           not null
 #  session_token   :string           not null
 #  icon_url        :string
@@ -14,13 +14,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  username: MyString
+  screenname: MyString
   password_digest: MyString
   session_token: MyString
   icon_url: MyString
 
 two:
-  username: MyString
+  screenname: MyString
   password_digest: MyString
   session_token: MyString
   icon_url: MyString
