Set up for channel search

--- a/test/fixtures/channels.yml
+++ b/test/fixtures/channels.yml
@@ -7,6 +7,7 @@
 #  team_id    :integer
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  owner_id   :integer          default(1), not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
