--- a/test/fixtures/channels.yml
+++ b/test/fixtures/channels.yml
@@ -8,6 +8,7 @@
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #  owner_id   :integer          default(1), not null
+#  private    :boolean          default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
