--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack -w",
     "postinstall": "webpack",
-    "heroku-postbuild": "./release-tasks.sh"
+    "heroku-postbuild": "webpack"
   },
   "repository": {
     "type": "git",
