Reverse reply association

--- a/test/fixtures/messages.yml
+++ b/test/fixtures/messages.yml
@@ -9,7 +9,7 @@
 #  channel_id :integer          not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
-#  prompt_id  :integer
+#  reply_id   :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
