--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,14 @@ services:
       POSTGRES_USER: pguser
       POSTGRES_PASSWORD: pgpassword
     ports:
-      - 5432:5432
+      - '5432:5432'
     volumes:
       - database:/var/lib/postgresql/data
+
+  redis:
+    image: redis:6
+    ports:
+      - '6379:6379'
 
 volumes:
   database:
